src/assets/css/_registration.scss
.registration {
   &-form {
      margin: 0 auto;
      width: 600px;
      text-align: center;
      padding: 10px;
      border: 2px solid var(--main-color);
      border-radius: 5px;
      background-color: var(--sub-main-color);
   }
   &-title {
      margin: 0 auto;
      width: 100%;
      text-align: center;
      margin-bottom: 15px;
   }
}
.form {
   &-label {
      display: block;
      width: 46%;
      height: 30px;
   }
   &-input {
      display: block;
      width: 46%;
      height: 30px;
      border: 2px solid var(--main-color);
      border-radius: 5px;
   }
}
.login-form__input-password {
   position: relative;
}
.login-form__input, .login-form__input-password {
   display: flex;
   justify-content: space-between;
   align-items: center;
   margin-top: 10px;
}
.btn {
   &-registration {
      display: block;
      margin: 0 auto;
      margin-top: 10px;
      margin-bottom: 25px;
      width: 30%
   }
}
#terms {
   margin: 25px 10px 15px 0;
}
.password-control {
	position: absolute;
	top: 4px;
	right: 6px;
	display: inline-block;
	width: 25px;
	height: 25px;
	background: url(https://snipp.ru/demo/495/view.svg) 0 0 no-repeat;
}
.no-view {
	background: url(https://snipp.ru/demo/495/no-view.svg) 0 0 no-repeat;
}

